--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
 <body style="background-color: black;">
     <header>
         <link rel="stylesheet" href="style.css" type="text/css">
-        <img src="image/Bar1.webp" alt="Immagine del bar">
-        <img src="image/Bar2.jpg" alt="immagine 2">
+        <img src="Bar1.webp" alt="Immagine del bar">
+        <img src="Bar2.jpg" alt="immagine 2">
         <h1>Bar del Centro</h1>
     </header>
     <nav>
